--- a/css/reserve.css
+++ b/css/reserve.css
@@ -5,11 +5,11 @@ body{
 }
 .group {
     position: absolute;
-    width: 5px;
-    height: 5px;
+    width: 8px;
+    height: 8px;
     border-radius: 150px;
     bottom: 3px;
-    left: calc(50% - 1.5px);
+    left: calc(50% - 8px);
     content: " ";
     display: block;
     background: black;
@@ -17,6 +17,7 @@ body{
 
 .group.out {
   background: lightgreen;
+  left: calc(50%);
 }
 
 section.limiter{
