--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -5,7 +5,7 @@
 
 	<body>
 
-		<div id="splash-header" class='flex-parent flex-parent--center-main viewport-twothird'>
+		<div id="splash-header" class=' header-img flex-parent flex-parent--center-main viewport-twothird'>
 
 			<div class="flex-child">
 			
