--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,10 @@
 	padding-right:10px;
   }
 
+  div.header-img{
+  	margin-top:50px;
+  }
+
   /* Sidebar */
   aside.right-sidebar{
   	display:none;
@@ -16,17 +20,11 @@
 	width:200px;
   }
 
-  img.pagelogo{
+ /* img.pagelogo{
 	margin-top:75px;
 	width:25%;
   }
-
-  img.pagelogo{
-	margin-top:75px;
-	width:25%;
-	margin-bottom:25px;
-  }
-
+*/
   /* Navigation */
   nav#main{
   	position:absolute;
