adding some simple snow animation

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,9 @@
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-    <link href="https://api.mapbox.com/mapbox-assembly/v0.21.0/assembly.min.css" rel="stylesheet">
+    <link href="/lib/assembly.min.css" rel="stylesheet">
 
-    <script async defer src="https://api.mapbox.com/mapbox-assembly/v0.21.0/assembly.js"></script>
+    <script async defer src="/lib/assembly.js"></script>
 
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
