--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 
 	<body>
 
-		<div class="page-header header-img animation-fade-in animation--speed-1 align-center" style='background:url({{page.header}});background-size:cover;'>
+		<div class="page-header viewport-third header-img animation-fade-in animation--speed-1 align-center" style='background:url({{page.header}});background-size:cover;'>
 			
 			<img class="animation-fade-in animation--speed-1 pagelogo" src="/img/yurtski-med.png" />
 
@@ -16,6 +16,9 @@
 
 	    	<div class="flex-parent">
 				<div class="flex-child flex-child--grow">
+
+					<h2 class="border-b pb6 mb12 align-center">{{page.title}}</h2>
+
 					{{ content }}
 				</div>
 
