--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,6 @@
 */
 
 #splash-header {
-    padding-top: 25px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
     background: url(../img/bowl-bg.jpg) no-repeat center center;
@@ -12,17 +10,23 @@
 }
 
 #splashlogo{
-	width:60%;
+	margin-top:15px;
+	width:30%;
+	z-index:5;
+	position:absolute;
+	top:25px;
+	left: 35%;
 }
 
 img.pagelogo{
 	margin-top:25px;
-	width:25%;
+	width:20%;
 	margin-bottom:10px;
 }
 
 h1{
-
+	font-size:1.8em;
+	font-weight:800;
 }
 
 h2{
@@ -79,7 +83,7 @@ div.page-header{
 }
 
 section.wrapper{
-	padding-top:75px;
+	padding-top:40px;
 	padding-left:5px;
 	padding-right:10px;
 	max-width:950px;
