--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,14 +1,9 @@
-
 @media screen and (max-width: 600px) {
 
   section.wrapper{
 	padding-top:10px;
 	padding-left:5px;
 	padding-right:10px;
-  }
-
-  div.header-img{
-  	margin-top:50px;
   }
 
   /* Sidebar */
@@ -20,14 +15,27 @@
 	width:200px;
   }
 
- /* img.pagelogo{
-	margin-top:75px;
-	width:25%;
+  div.page-header{
+  	margin-top:50px;
   }
-*/
+
+  #splashlogo{
+	/*margin-top:50px;*/
+	width:60%;
+	z-index:1;
+	position:absolute;
+	top:100px;
+	left: 20%;
+  }
+
+  img.pagelogo{
+  	width:50%;
+  	margin-top:70px;
+  }
+
   /* Navigation */
   nav#main{
-  	position:absolute;
+  	position:fixed;
   	top:0;
   	right:0;
   	left:0;
@@ -54,7 +62,7 @@
   }
 
   nav#main.responsive {
-  	position: absolute;
+  	position: fixed;
   }
   
   nav#main.responsive a {
