--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     color: #f8f8f8;
     background: url(../img/bowl-bg.jpg) no-repeat center center;
     background-size: cover;
+    position:relative;
 }
 
 #splashlogo{
@@ -14,13 +15,13 @@
 	width:30%;
 	z-index:5;
 	position:absolute;
-	top:25px;
+	top:5px;
 	left: 35%;
 }
 
 img.pagelogo{
 	margin-top:25px;
-	width:20%;
+	width:15%;
 	margin-bottom:10px;
 }
 
@@ -38,6 +39,11 @@ h3{
 	padding-bottom:5px;
 	font-size:1.2em;
 	font-weight:600;
+}
+
+h4{
+	font-size:1.1em;
+	font-weight:500;
 }
 
 span.bio-em{
@@ -80,6 +86,7 @@ p{
 
 div.page-header{
 	background-size: cover;
+	position:relative;
 }
 
 section.wrapper{
@@ -100,19 +107,24 @@ img.bio{
 
 /* Navigation (On Computer)*/
 nav#main{
-	background-color:#222;
+	background-color:rgba(25,25,25,0.75);
 	text-align:center;
 	display:block;
+	position:absolute;
+	right:0;
+	left:0;
+	bottom:0px;
 }
 
 nav#main a{
 	text-transform: uppercase;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 	display:inline-block;
 	color:white;
-	padding: 15px 10px 15px 10px;
-	margin:0 2%;
-	font-size:24px;
+	padding: 15px 5px 15px 5px;
+	margin:0 1%;
+	z-index:100;
+	font-size:18px;
 	text-shadow:2px 2px 4px #000;
 }
 
