--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,11 +12,7 @@
   }
 
   img.bio{
-	width:200px;
-  }
-
-  div.page-header{
-  	margin-top:50px;
+	  width:200px;
   }
 
   #splashlogo{
@@ -40,6 +36,8 @@
   	right:0;
   	left:0;
   	z-index:3;
+    bottom:unset;
+
   }
   nav#main a:not(:first-child) {
   	display: none;
