--- a/_includes/booknow.html
+++ b/_includes/booknow.html
@@ -1,3 +1,3 @@
 <div class="align-center">
-	<a href="#" class='mt12 mb12 btn btn--gray cursor--pointer'>Book Now!</a>
+	<a href="#" class='mt12 mb12 txt-uppercase btn round btn--m btn--gray cursor--pointer'>Book Now</a>
 </div>
