--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,3 +85,29 @@
   }
 }
 
+@media only screen and (max-width: 800px) and (min-width: 600px){
+
+  section.wrapper{
+    padding-top:10px;
+    padding-left:5px;
+    padding-right:10px;
+  }
+
+  nav#main a{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display:inline-block;
+    color:white;
+    padding: 5px 2px 5px 2px;
+    margin:0 4px;
+    z-index:100;
+    font-size:18px;
+    text-shadow:2px 2px 4px #000;
+  }
+  
+  iframe.embedded-video{
+  width:400px;
+  height:220px;
+  }
+}
+
