adding the booking pieces

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
 
     <script async defer src="/lib/assembly.js"></script>
 
+    <script src="https://fareharbor.com/embeds/api/v1/?autolightframe=yes"></script>
+
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
