--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,7 +16,7 @@
     {% endfor %}
 
     <!-- FareHarbor book button for flow #53849 -->
-    <a href="https://fareharbor.com/embeds/book/yurtski/?full-items=yes&flow=53849">Book Now</a>
+    <a href="#">Book Now</a>
 
     <script type="text/javascript">
         function navToggle() {
