adding all sorts of stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
     <script async defer src="/lib/assembly.js"></script>
 
     <!-- Custom CSS -->
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/responsive.css" rel="stylesheet">
 </head>
