--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav id='main' class="topnav" role="navigation">
 
-    <a class="logo" href="/">YurtSki</a>
+    <!-- <a class="logo" href="/">YurtSki</a> -->
 
     <a href="javascript:void(0);" class="icon" onclick="navToggle()">&#9776;</a>
 
