--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,10 @@
     <section class="wrapper border-t mt24 pt12 border--gray-light">
         <div class="flex-parent flex-parent--center-main flex-parent--wrap">
 
+          <!-- <div class="flex-child">
+
+          </div> -->
+
 	        <div class="flex-child"
 	            <a target="_blank" href="//facebook.com/yurtski"><img class="social" src="/img/icon/facebook.png"></a>
 	        </div>
@@ -22,5 +26,11 @@
 	        </div>
         </div>
         <p class="align-center">&copy; 2018 Montana Backcountry Yurts, LLC dba. YurtSki All Rights Reserved.</p>
+        <div style="margin:0 auto;" class="align-center w300 py12">
+          <img class="inline-block" src="/img/icon/usfs.png">
+          <div class="inline-block">
+            <p class='align-l'>Permitted by Lolo National Forest, <br>Seeley Lake Ranger District. </p>
+          </div>
+       </div>
     </section>
 </footer>
