--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,9 @@
 
 		<div class="page-header viewport-third header-img animation-fade-in animation--speed-1 align-center" style='background:url({{page.header}});background-size:cover;'>
 
+		<a href="/">
 			<img class="animation-fade-in animation--speed-1 pagelogo" src="/img/yurtski-med.png" />
+		</a>
 
 		{% include navigation.html %}
 
@@ -19,8 +21,10 @@
 				<div class="flex-child flex-child--grow">
 
 					<h2 class="border-b pb6 mb12 align-center">{{page.title}}</h2>
+					<div class="px12">
+						{{ content }}
+					</div>
 
-					{{ content }}
 				</div>
 
 				<aside class='flex-child flex-child--no-shrink w180 right-sidebar'>
