adding more to the yurts page

--- a/_includes/sidebar-right.html
+++ b/_includes/sidebar-right.html
@@ -2,7 +2,7 @@
 
 	<div class="align-center">
 
-		<p class="pl12 txt-em txt-l">Follow us on Facebook and Instagram for updates</p>
+		<p class="pl12 txt-em txt-l">Follow us on Facebook and Instagram</p>
 
 		<a target="_blank" class="mr12" href="//facebook.com/yurtski">
 			<img class="social" src="/img/icon/facebook.png">
