added all of this

--- a/_includes/offerings.html
+++ b/_includes/offerings.html
@@ -1,9 +1,9 @@
 <div class="txt-blockquote txt-l round-bold border border--green py6 mb24 mt24">
 	<p class="">We are happy to announce the 2018-2019 season at YurtSki will offer:</p>
 	<ul class="txt-ul">
-		<li><p><a class="link" href="/pricing/#rentals">Self-Sufficient Yurt Rentals</a><span class="txt-m"> (We tell you where to go, you do the rest)</span></p></li>
-		<li><p><a class="link" href="/pricing/#gear-haul">Gear Hauling</a><span class="txt-m"> (includes a skier tow!)</p></li>
-		<li><p><a class="link" href="/pricing/#catering">Fully Catered Trips</a></p></li>
+		<li><p><a class="link" href="/pricing/#rentals">Self-Sufficient Yurt Rentals</a><span class="txt-m"> - We tell you where to go, you handle the rest</span></p></li>
+		<li><p><a class="link" href="/pricing/#gear-haul">Gear Hauling</a><span class="txt-m"> - We carry your gear AND tow your skiers</p></li>
+		<li><p><a class="link" href="/pricing/#catering">Fully Catered Trips</a><span class="txt-m"> - Let us worry about the menu</span></p></li>
 	</ul>
 	<p class="txt-m"> -The YurtSki Team</p>
 </div>
