pushing the new stuff to dev

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,12 +19,30 @@
 	        </div>
 
 	        <div class="flex-child ml24">
+
 				<a class="link" href="mailto:info@yurtski.com">
 					<svg class='inline icon'><use xlink:href='#icon-mail'/></svg> info@yurtski.com</a>
 				<br>
 				<a class="link" href="tel:+14068484824"><svg class='inline icon'><use xlink:href='#icon-user'/></svg> (406) 848-4824</a>
 	        </div>
         </div>
+
+        <div class="only-on-mobile w300 mx-auto align-center">
+          <!-- Begin MailChimp Signup Form -->
+        	<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+
+        	<div id="mc_embed_signup">
+        		<form action="https://yurtski.us18.list-manage.com/subscribe/post?u=dc8e9255c759835ea62f6c1ee&amp;id=1dcfb26627" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        	    <div id="mc_embed_signup_scroll" class="align-center">
+        		  <input type="email" value="" name="EMAIL" class="email w240 align-center mx-auto" id="mce-EMAIL" placeholder="email address" required>
+        	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_dc8e9255c759835ea62f6c1ee_1dcfb26627" tabindex="-1" value=""></div>
+        	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn round btn--m btn--gray cursor--pointer mx-auto inline-block"></div>
+        	    </div>
+        	</form>
+        	</div>
+        </div>
+
         <p class="align-center">&copy; 2018 Montana Backcountry Yurts, LLC dba. YurtSki All Rights Reserved.</p>
         <div style="margin:0 auto;" class="align-center w300 py12">
           <img class="inline-block" src="/img/icon/usfs.png">
