--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
-<footer>
-    <section class="wrapper border-t mt24 pt12 border--gray-light">
+<footer class="bg-darken5">
+    <section class="wrapper mt24 pt12 border--gray-light">
         <div class="flex-parent flex-parent--center-main flex-parent--wrap">
 
           <!-- <div class="flex-child">
@@ -27,17 +27,15 @@
 	        </div>
         </div>
 
-        <div class="only-on-mobile w300 mx-auto align-center">
-          <!-- Begin MailChimp Signup Form -->
-        	<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+        <div class="mx-auto align-center">
 
         	<div id="mc_embed_signup">
         		<form action="https://yurtski.us18.list-manage.com/subscribe/post?u=dc8e9255c759835ea62f6c1ee&amp;id=1dcfb26627" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         	    <div id="mc_embed_signup_scroll" class="align-center">
-        		  <input type="email" value="" name="EMAIL" class="email w240 align-center mx-auto" id="mce-EMAIL" placeholder="email address" required>
+        		  <input type="email" value="" name="EMAIL" class="email w300 mx-auto inline-block" id="mce-EMAIL" placeholder="email address" required>
         	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_dc8e9255c759835ea62f6c1ee_1dcfb26627" tabindex="-1" value=""></div>
-        	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn round btn--m btn--gray cursor--pointer mx-auto inline-block"></div>
+        	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn round btn--m btn--gray cursor--pointer mx-auto inline-block">
         	    </div>
         	</form>
         	</div>
