--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,9 @@
 
     <script async defer src="/lib/assembly.js"></script>
 
+    <!--  Mailchimp form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+
     <!-- Custom CSS -->
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/responsive.css" rel="stylesheet">
