--- a/_includes/sidebar-right.html
+++ b/_includes/sidebar-right.html
@@ -19,10 +19,8 @@
 	{% include booknow.html %}
 
 	<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-
 	<style type="text/css">
-		#mc_embed_signup{background:#fff; clear:left;}
+		/* #mc_embed_signup{background:#fff; clear:left;} */
 		#mc_embed_signup label{
 			font-size:18px;
 			font-weight:400;
