--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,12 +41,15 @@
         	</div>
         </div>
 
-        <p class="align-center">&copy; 2018 Montana Backcountry Yurts, LLC dba. YurtSki All Rights Reserved.</p>
-        <div style="margin:0 auto;" class="align-center w300 py12">
+        <p class="align-center">This Institution is an equal opportunity provider.</p>
+
+        <div style="margin:0 auto;" class="align-center w300 py6">
           <img class="inline-block" src="/img/icon/usfs.png">
           <div class="inline-block">
             <p class='align-l'>Permitted by Lolo National Forest, <br>Seeley Lake Ranger District. </p>
           </div>
        </div>
+
+       <p class="align-center">&copy; 2018 Montana Backcountry Yurts, LLC dba. YurtSki All Rights Reserved.</p>
     </section>
 </footer>
