--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,8 +16,10 @@
 
     <!-- Custom CSS -->
     <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/responsive.css" rel="stylesheet">
 
+    <link href="/css/navigation.css" rel="stylesheet">
+
+    <link href="/css/responsive.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117115363-1"></script>
