--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 
 	<body>
 
-		<div class="page-header viewport-third header-img animation-fade-in animation--speed-1 align-center" style='background:url({{page.header}});background-size:cover;'>
+		<div class="page-header header-img animation-fade-in animation--speed-1 align-center" style='background:url({{page.header}});background-size:cover;'>
 
 		<a href="/">
 			<img class="animation-fade-in animation--speed-1 pagelogo" src="/img/yurtski-med.png" />
