--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -5,9 +5,9 @@
 
 	<body>
 
-		<div id="splash-header" class=' header-img splash-header viewport-half'>
+		<div id="splash-header" class=' header-img splash-header'>
 
-			<canvas id='snow-canvas'>
+			<canvas id='snow-canvas' style="width:0px;">
 			</canvas>
 
 
@@ -32,6 +32,6 @@
 	    </section>
 
 		{% include footer.html %}
-		<script src="/js/snow.js"></script>
+		<!-- <script src="/js/snow.js"></script> -->
 	</body>
 </html>
