--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,10 @@
     position:relative;
 }
 
-#splashlogo{
-	margin-top:15px;
-	width:30%;
-	z-index:5;
-	position:absolute;
-	top:5px;
-	left: 35%;
-}
-
 img.pagelogo{
 	margin-top:25px;
 	width:15%;
-	margin-bottom:10px;
+	margin-bottom:15px;
 }
 
 h1{
@@ -106,47 +97,13 @@ img.bio{
 	padding:5px;
 }
 
-/* Navigation (On Computer)*/
-nav#main{
-	background-color:rgba(25,25,25,0.75);
-	text-align:center;
-	display:block;
-	position:absolute;
-	right:0;
-	left:0;
-	bottom:0px;
-}
-
-nav#main a{
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	display:inline-block;
-	color:white;
-	padding: 15px 5px 15px 5px;
-	margin:0 1%;
-	z-index:100;
-	font-size:18px;
-	text-shadow:2px 2px 4px #000;
-}
-
-nav#main a:hover:not(.icon){
-	background-color:#01AEF3;
-	text-shadow:2px 2px 4px #555;
-	animation-name: resaturate;
-    animation-duration: 0.5s;
-}
-
-
-nav#main a.active{
-	color:#FCF900;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-nav#main .icon {
-    display: none;
-}
-
 iframe.embedded-video{
 	width:560px;
 	height:315px;
+}
+
+.btn--ysblue{
+  background-color:#66ABDF;
+  /* color: #FBF239; */
+  border: 1px solid black;
 }
