--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,114 +1,69 @@
-@media screen and (max-width: 600px) {
-
-  section.wrapper{
-	padding-top:10px;
-	padding-left:5px;
-	padding-right:10px;
-  }
-
-  /* Sidebar */
-  aside.right-sidebar{
-  	display:none;
-  }
-
-  img.bio{
-	  width:250px;
-    margin: 0 auto;
-    text-align:center;
-  }
-
-  #splashlogo{
-	/*margin-top:50px;*/
-	width:60%;
-	z-index:1;
-	position:absolute;
-	top:100px;
-	left: 20%;
-  }
-
-  img.pagelogo{
-  	width:50%;
-  	margin-top:70px;
-  }
-
-  /* Navigation */
-  nav#main{
-  	position:fixed;
-  	top:0;
-  	right:0;
-  	left:0;
-  	z-index:3;
-    bottom:unset;
-
-  }
-  nav#main a:not(:first-child) {
-  	display: none;
-  }
-
-  nav#main a.icon {
-  	display:block;
-    position:fixed;
-    top:0px;
-    right:10px;
-    color:white;
-    font-weight:400;
-  }
-
-  nav#main a.logo {
-    display: block;
-    float:left;
-    color:white;
-    font-weight:400;
-  }
-
-  nav#main.responsive {
-  	position: fixed;
-  }
-
-  nav#main.responsive a {
-    display: block;
-    clear:both;
-    /*width:100%;*/
-    /*text-align: left;*/
-  }
-
-  nav#main.responsive a.icon {
-  	display:block;
-    position:fixed;
-    top:10px;
-    right:10px;
-    /*color:white;*/
-    font-weight:400;
-  }
-
-  iframe.embedded-video{
-	width:320px;
-	height:200px;
-  }
+/*
+  Default: Mobile
+ */
+section.wrapper{
+  padding-top:10px;
+  padding-left:5px;
+  padding-right:10px;
 }
 
-@media only screen and (max-width: 800px) and (min-width: 600px){
+/* Sidebar */
+aside.right-sidebar{
+  display:none;
+}
 
+img.bio{
+  width:250px;
+  margin: 0 auto;
+  text-align:center;
+}
+
+iframe.embedded-video{
+  width:320px;
+  height:200px;
+}
+
+#splashlogo{
+  margin: 10px auto;
+	width:50%;
+	top:5px;
+}
+
+img.pagelogo{
+	margin-top:10px;
+	width:40%;
+	margin-bottom:10px;
+}
+
+/* First Expansion Level */
+@media screen and (min-width: 660px){
   section.wrapper{
     padding-top:10px;
     padding-left:5px;
     padding-right:10px;
   }
 
-  nav#main a{
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    display:inline-block;
-    color:white;
-    padding: 5px 2px 5px 2px;
-    margin:0 4px;
-    z-index:100;
-    font-size:18px;
-    text-shadow:2px 2px 4px #000;
+  img.pagelogo{
+  	margin-top:10px;
+  	width:25%;
+  	margin-bottom:10px;
   }
 
   iframe.embedded-video{
   width:400px;
   height:220px;
   }
+}
+/* Full size shit */
+@media screen and (min-width: 1000px){
+  aside.right-sidebar{
+    display:block;
+  }
+
+  #splashlogo{
+    margin: 40px auto;
+  	width:30%;
+  	top:5px;
+  }
+
 }
