adding the banner link

--- a/css/main.css
+++ b/css/main.css
@@ -107,3 +107,11 @@ iframe.embedded-video{
   /* color: #FBF239; */
   border: 1px solid black;
 }
+
+.yurtski-blue{
+	color:#66ABDF;
+}
+
+.yurtski-yellow{
+	color:#F6EF2A;
+}
