added pixel tracking code

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,6 +14,8 @@
             {% endif %}
         {% endif %}
         {% endfor %}
+
+        <a target="_blank" href="//bigbelthut.com">Big Belt Hut<span style="color:red;"> New!</span></a>
     </div>
 
     <script type="text/javascript">
