updating the github too

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -16,7 +16,7 @@
 
 			{% include navigation.html %}
 		</div>
-		 {% include banner.html %}
+		 <!-- {% include banner.html %} -->
 
 		<section class="wrapper">
 
