updating the links to instagram because the URL changed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 	            <a target="_blank" href="//facebook.com/yurtski"><img class="social" src="/img/icon/facebook.png"></a>
 	        </div>
 	        <div class="flex-child ml24">
-	            <a target="_blank" href="//instagram.com/yurtskimt"><img class="social mt3" src="/img/icon/instagram.png"></a>
+	            <a target="_blank" href="//instagram.com/montana_backcountry_yurts"><img class="social mt3" src="/img/icon/instagram.png"></a>
 	        </div>
 	        <div class="flex-child ml24">
 	            {% include booknow.html %}
