--- a/_includes/sidebar-right.html
+++ b/_includes/sidebar-right.html
@@ -8,7 +8,7 @@
 			<img class="social" src="/img/icon/facebook.png">
 		</a>
 
-		<a target="_blank" href="//instagram.com/yurtskimt">
+		<a target="_blank" href="//instagram.com/montana_backcountry_yurts">
 			<img class="social mt3" src="/img/icon/instagram.png">
 		</a>
 
