--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,69 +1,42 @@
 /*
-  Default: Mobile
- */
-section.wrapper{
-  padding-top:10px;
-  padding-left:5px;
-  padding-right:10px;
+	Any and all responsive queries live here
+*/
+
+/* Header */
+img.header-logo{
+	height:100px;
 }
 
-/* Sidebar */
-aside.right-sidebar{
-  display:none;
+@media (min-width: 410px) {
+	img.header-logo{
+		height:150px;
+	}
 }
 
-img.bio{
-  width:250px;
-  margin: 0 auto;
-  text-align:center;
+@media (min-width: 700px) {
+	img.header-logo{
+		height:250px;
+	}
 }
 
-iframe.embedded-video{
-  width:320px;
-  height:200px;
-}
+@media only screen and (max-width: 700px) and (min-width: 600px){
 
-#splashlogo{
-  margin: 10px auto;
-	width:50%;
-	top:5px;
-}
-
-img.pagelogo{
-	margin-top:10px;
-	width:40%;
-	margin-bottom:10px;
-}
-
-/* First Expansion Level */
-@media screen and (min-width: 660px){
-  section.wrapper{
-    padding-top:10px;
-    padding-left:5px;
-    padding-right:10px;
+  nav#main div#nav-buttons a{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display:inline-block;
+    color:white;
+    padding: 5px 2px 5px 2px;
+    margin:0 4px;
+    font-size:18px;
+    text-shadow:2px 2px 4px #000;
   }
 
-  img.pagelogo{
-  	margin-top:10px;
-  	width:25%;
-  	margin-bottom:10px;
-  }
-
-  iframe.embedded-video{
-  width:400px;
-  height:220px;
-  }
 }
-/* Full size shit */
-@media screen and (min-width: 1000px){
-  aside.right-sidebar{
-    display:block;
-  }
 
-  #splashlogo{
-    margin: 40px auto;
-  	width:30%;
-  	top:5px;
-  }
-
+@media (max-width: 600px){
+    .smaller-on-mobile{
+        width:33%;
+        max-width:150px;
+    }
 }
