--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,6 @@ header{
 h1.page-title{
 	text-align:left;
 	padding: 25px 0px 0px 0px;
-	font-size:2em;
 	font-weight:bold;
 
 	/*display:inline-block;*/
@@ -60,14 +59,14 @@ img.sub-header-logo{
 }
 
 /* Responsive, pretty header */
-@media(min-width: 400px){
+/*@media(min-width: 400px){
 	h1.page-title{
 		font-size:2.5em;
 	}
 	img.sub-header-logo{
 		height:100px;
 	}
-}
+}*/
 
 @media(min-width: 600px){
 	h1.page-title{
@@ -78,7 +77,7 @@ img.sub-header-logo{
 	}
 }
 
-@media(min-width:800px){
+@media(min-width:820px){
 	div.title-box{
 		padding-top:20px;
 	}
@@ -206,7 +205,7 @@ div.table{
 	padding-right:6px;
 }
 
-@media (min-width: 400px) {
+/*@media (min-width: 400px) {
 
 	.container{
 		padding: 0px;
@@ -215,7 +214,7 @@ div.table{
 	div.table{
 		max-width:100%;
 	}
-}
+}*/
 
 iframe.embedded-video{
   width:320px;
@@ -349,14 +348,6 @@ img.social:hover{
 	font-weight:800;
 }
 
-.hero-button{
-	font-size:1.5em;
-	font-family:sans-serif;
-	margin: 4px 0px;
-	padding: 0px 10px;
-	text-transform:none;
-}
-
 .no-border{
 	border:none;
 }
@@ -417,6 +408,12 @@ div.toggle h4:hover{
 	padding: 10px;
 }
 
+.banner-box h5,h6{
+	padding: 0px 0px;
+	margin: 0px 2px;
+	font-weight:bold;
+}
+
 .faq-section{
 	font-size:2.5rem;
 	margin-top:25px;
@@ -425,16 +422,41 @@ div.toggle h4:hover{
 
 div.tile-button{
 	border-radius:5px;
+	max-with:300px;
+	background-size:cover;
 }
+
+div.tile-button a{
+	padding-top:80px;
+	padding-bottom:125px;
+	font-size:2em;
+	font-family:sans-serif;font-family:sans-serif;
+	border: none;
+	color: white;
+	text-transform:none;
+}
+
+div.tile-button a:hover{
+	color:yellow;
+}
+
+
 
 div.tile-button:hover{
 	/*border: 1px solid white;*/
 	background-color:rgba(255,255,255,0.4);
 }
 
-div.tile-button h3:hover{
-	color:yellow;
+
+
+
+.hero-button{
+	margin: 4px 0px;
+	padding: 0px 10px;
+	
 }
+
+
 
 
 
