--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -42,19 +42,21 @@
   box-sizing: border-box; }
 
 /* For devices larger than 400px */
-@media (min-width: 400px) {
+/*@media (min-width: 400px) {
   .container {
     width: 85%;
     padding: 0; }
 }
-
+*/
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 80%; 
+    min-width:550px;}
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 4%; 
+  }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
