--- a/css/custom.css
+++ b/css/custom.css
@@ -154,6 +154,7 @@ h5{
 	margin-bottom:0.5rem;
 }
 
+
 h5.border-b{
 	border-bottom: 1px solid #999;
 }
@@ -410,7 +411,7 @@ div.toggle h4:hover{
 
 .banner-box h5,h6{
 	padding: 0px 0px;
-	margin: 0px 2px;
+	margin: 0px 0px;
 	font-weight:bold;
 }
 
@@ -462,7 +463,12 @@ div.tile-button:hover{
 
 
 
-
+.highlight{
+	border: 1px solid orange;
+	border-radius: 5px;
+	padding: 3px;
+	background-color:rgba(255,165,0,0.05)
+}
 
 
 
