--- a/css/custom.css
+++ b/css/custom.css
@@ -462,9 +462,16 @@ div.tile-button:hover{
 }
 
 
-
-
-
+.available{
+	text-align: center;
+    color: black;
+    padding: 10px;
+    background-color: #d4f296;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
+}
 
 
 .highlight{
