--- a/css/helper.css
+++ b/css/helper.css
@@ -3,81 +3,40 @@
   margin: 0 auto;
 }
 
-.align-left{
-	text-align:left;
-}
+.align-left{ text-align:left; }
 
-.mb12{
-	margin-bottom:12px;
-}
 
-.mt12{
-	margin-top:12px;
-}
+/* Margin shorthands inspired by assembly */
 
-.mt6{
-	margin-top:6px;
-}
+.mt6{  margin-top:6px;  }
+.mt12{margin-top:12px; }
 
-.mr12{
-	margin-right:12px;
-}
+.mr12{ margin-right:12px; }
+.mr20{ margin-right:20px; }
 
-.mr20{
-	margin-right:20px;
-}
+.mb0{ margin-bottom:0px;   }
+.mb3{  margin-bottom:3px;  }
+.mb6{  margin-bottom:6px;  }
+.mb12{ margin-bottom:12px; }
+.mb24{ margin-bottom:24px; }
 
-.mx20{
-	margin-left:20px;
-	margin-right:20px;
-}
+.mx20{ margin-left:20px; margin-right:20px;}
 
-.mb0{
-	margin-bottom:0px;
-}
+.p0{ padding:0px; }
+.p6{ padding:6px; }
 
-.mb12{
-	margin-bottom:12px;
-}
+.pt12{ padding-top:12px; }
 
-.mb24{
-	margin-bottom:24px;
-}
+.px6{ padding-left:6px; padding-right:6px; }
+.px36{ padding-right:36px; padding-left:36px; }
+
+.py12{ padding-top:12px; padding-bottom:12px; }
+.py24{ padding-top:24px; padding-bottom:24px; }
+
 
 .tight{
 	margin:0;
 	padding:0px 0px 5px 0px;
-}
-
-.p0{
-	padding:0px;
-}
-
-.p6{
-	padding:6px;
-}
-
-.px36{
-  padding-right:36px;
-  padding-left:36px;
-}
-.px6{
-	padding-left:6px;
-	padding-right:6px;
-}
-
-.pt12{
-	padding-top:12px;
-}
-
-.py12{
-	padding-top:12px;
-	padding-bottom:12px;
-}
-
-.py24{
-	padding-top:24px;
-	padding-bottom:24px;
 }
 
 img.full{
