--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,10 @@ img.header-logo{
 	height:100px;
 }
 
+.large-screen-only{
+    display:none;
+}
+
 @media (min-width: 410px) {
 	img.header-logo{
 		height:150px;
@@ -19,6 +23,9 @@ img.header-logo{
 	}
     .small-screen-only{
         display:none;
+    }
+    .large-screen-only{
+        display:block;
     }
 }
 
