--- a/css/helper.css
+++ b/css/helper.css
@@ -1,6 +1,6 @@
 .align-center{
   text-align:center;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
 .align-left{ text-align:left; }
@@ -22,10 +22,14 @@
 
 .mx20{ margin-left:20px; margin-right:20px;}
 
+.ml12{ margin-left:12px }
+
 .p0{ padding:0px; }
 .p6{ padding:6px; }
 
+.pt6{ padding-top:12px; }
 .pt12{ padding-top:12px; }
+
 
 .px6{ padding-left:6px; padding-right:6px; }
 .px36{ padding-right:36px; padding-left:36px; }
